--- a/sip-servlets-examples/pom.xml
+++ b/sip-servlets-examples/pom.xml
@@ -22,6 +22,7 @@
 		<module>click-to-call</module>
 		<module>conference-demo</module>
 		<module>conference-demo-jsr309</module>
+		<module>custom-call-forwarding-distributable</module>
 		<module>diameter-event-charging</module>
 		<module>diameter-openims</module>
 		<module>facebook-c2c</module>
