--- a/sip-servlets-examples/alerting-app/sip-servlets/pom.xml
+++ b/sip-servlets-examples/alerting-app/sip-servlets/pom.xml
@@ -14,64 +14,15 @@
 	<dependencies>	
 		<!-- media dependencies -->
 		<dependency>
-			<groupId>org.mobicents.servers.media</groupId>
-			<artifactId>mobicents-media-server-msc-api</artifactId>
-			<version>${mms.version}</version>			
-		</dependency>
-		<dependency>		
-			<groupId>org.mobicents.servers.media</groupId>
-			<artifactId>mobicents-media-server-constants</artifactId>
-			<version>${mms.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mobicents.external.freetts</groupId>
-			<artifactId>freetts</artifactId>
-			<version>${freetts.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mobicents.servers.media</groupId>
-			<artifactId>mobicents-media-server-msc-api-local-impl</artifactId>
-			<version>${mms.version}</version>
-			<exclusions>
-				<exclusion>
-					<groupId>javax.sip</groupId>
-					<artifactId>jain-sip-ri</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>org.mobicents.servers.media</groupId>
-					<artifactId>mobicents-media-server-spi</artifactId>
-				</exclusion>
-			</exclusions>		
-		</dependency>
-		<dependency>
-			<groupId>org.mobicents.external.freetts</groupId>
-			<artifactId>cmu_time_awb</artifactId>
+			<groupId>org.mobicents.external.jsr309</groupId>
+			<artifactId>mscontrol</artifactId>
 			<version>1.0</version>
 		</dependency>
+
 		<dependency>
-			<groupId>org.mobicents.external.freetts</groupId>
-			<artifactId>cmu_us_kal</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mobicents.external.freetts</groupId>
-			<artifactId>cmudict04</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mobicents.external.freetts</groupId>
-			<artifactId>en_us</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mobicents.external.freetts</groupId>
-			<artifactId>cmulex</artifactId>
-			<version>1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.mobicents.external.freetts</groupId>
-			<artifactId>cmutimelex</artifactId>
-			<version>1.0</version>
+			<groupId>org.mobicents.jsr309</groupId>
+			<artifactId>mobicents-jsr309-impl</artifactId>
+			<version>2.0.0.BETA4</version>
 		</dependency>
 		<!-- jslee deps : Commented out since the prefferred way is through SMS Servlets -->
 		<!--dependency>		
