--- a/sip-servlets-impl/docs/mss-sip-stack.properties
+++ b/sip-servlets-impl/docs/mss-sip-stack.properties
@@ -7,3 +7,8 @@ javax.sip.AUTOMATIC_DIALOG_SUPPORT=off
 gov.nist.javax.sip.DELIVER_UNSOLICITED_NOTIFY=true
 gov.nist.javax.sip.THREAD_POOL_SIZE=64
 gov.nist.javax.sip.REENTRANT_LISTENER=true
+# setting up the buffer size to reduce retransmissions and avoid loosing messages
+gov.nist.javax.sip.RECEIVE_UDP_BUFFER_SIZE=65536
+gov.nist.javax.sip.SEND_UDP_BUFFER_SIZE=65536
+gov.nist.javax.sip.AGGRESSIVE_CLEANUP=true
+org.mobicents.ha.javax.sip.CACHE_CLASS_NAME=org.mobicents.ha.javax.sip.cache.NoCache
