Update Issue 1609\nUsing latest cluster snapshot version
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@12904 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,7 @@
 	<properties>
 		<!-- MOBICENTS TOOL VERSIONS -->
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.BETA2</mobicents.tools.mavenplugin.eclipse.version>
-		<mobicents.cluster.version>1.5</mobicents.cluster.version>
+		<mobicents.cluster.version>1.6-SNAPSHOT</mobicents.cluster.version>
 		<mobicents.balancer.version>1.0.0.FINAL</mobicents.balancer.version>
 		<mobicents.jain.sip.ha.version>0.11-SNAPSHOT</mobicents.jain.sip.ha.version>
 		<tomcat.version>6.0.20</tomcat.version>	
