adding core jar as well
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@13145 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-tomcat-jboss4/pom.xml
+++ b/sip-servlets-tomcat-jboss4/pom.xml
@@ -269,7 +269,7 @@
 										<goal>copy-dependencies</goal>
 		 	            			</goals>
 		 	            			<configuration>
-									<includeArtifactIds>sip-balancer-jar,mobicents-jain-sip-jboss4</includeArtifactIds>
+									<includeArtifactIds>sip-balancer-jar,mobicents-jain-sip-ha-core,mobicents-jain-sip-jboss4</includeArtifactIds>
 					    			<outputDirectory>${JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer</outputDirectory>
 		 	            			</configuration>
 		 	          		</execution>
@@ -329,7 +329,7 @@
 										<goal>copy-dependencies</goal>
 		 	            			</goals>
 		 	            			<configuration>
-									<includeArtifactIds>sip-balancer-jar,mobicents-jain-sip-jboss4</includeArtifactIds>
+									<includeArtifactIds>sip-balancer-jar,mobicents-jain-sip-ha-core,mobicents-jain-sip-jboss4</includeArtifactIds>
 					    			<outputDirectory>${JBOSS_HOME}/server/${node}/deploy/jboss-web.deployer</outputDirectory>
 		 	            			</configuration>
 		 	          		</execution>
