--- a/sip-servlets-bootstrap/release/mss-sip-stack-jboss-5-all.properties
+++ b/sip-servlets-bootstrap/release/mss-sip-stack-jboss-5-all.properties
@@ -11,5 +11,6 @@ gov.nist.javax.sip.REENTRANT_LISTENER=true
 gov.nist.javax.sip.RECEIVE_UDP_BUFFER_SIZE=65536
 gov.nist.javax.sip.SEND_UDP_BUFFER_SIZE=65536
 gov.nist.javax.sip.AGGRESSIVE_CLEANUP=true
+gov.nist.javax.sip.MAX_FORK_TIME_SECONDS=0
 #cache used by jain sip ha to replicate dialogs
 org.mobicents.ha.javax.sip.cache.MobicentsSipCache.cacheName=standard-session-cache
