--- a/sip-servlets-test-suite/sipp-scenarios/performance/jboss-setup/mss-sip-stack.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/performance/jboss-setup/mss-sip-stack.properties
@@ -11,4 +11,5 @@ gov.nist.javax.sip.REENTRANT_LISTENER=true
 gov.nist.javax.sip.RECEIVE_UDP_BUFFER_SIZE=65536
 gov.nist.javax.sip.SEND_UDP_BUFFER_SIZE=65536
 gov.nist.javax.sip.AGGRESSIVE_CLEANUP=true
+gov.nist.javax.sip.MAX_FORK_TIME_SECONDS=0
 org.mobicents.ha.javax.sip.CACHE_CLASS_NAME=org.mobicents.ha.javax.sip.cache.NoCache
