Adding the logger name to stack properties
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@13429 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/mss-sip-stack.properties
+++ b/sip-servlets-bootstrap/release/mss-sip-stack.properties
@@ -1,4 +1,5 @@
 gov.nist.javax.sip.LOG_MESSAGE_CONTENT=true
+gov.nist.javax.sip.LOG4J_LOGGER_NAME=gov.nist
 gov.nist.javax.sip.TRACE_LEVEL=LOG4J
 gov.nist.javax.sip.DEBUG_LOG=logs/mss-jsip-debuglog.txt
 gov.nist.javax.sip.SERVER_LOG=logs/mss-jsip-messages.xml
