Update Issue 1504 Adding the configs above in "disabled mode". To enable security now, all that is needed is to uncomment the part in web.xml
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@13617 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-management/src/main/webapp/WEB-INF/web.xml
+++ b/sip-servlets-management/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,28 @@
 <web-app>
 	<display-name>Sample</display-name>	
 	
+	<!-- Uncomment if you want to secure the management console 
+	 <security-constraint>
+     <web-resource-collection>
+       <web-resource-name>HtmlAdaptor</web-resource-name>
+       <description>MSS admin security
+       </description>
+       <url-pattern>/*</url-pattern>
+     </web-resource-collection>
+     <auth-constraint>
+       <role-name>JBossAdmin</role-name>
+     </auth-constraint>
+   </security-constraint>
+
+   <login-config>
+      <auth-method>BASIC</auth-method>
+      <realm-name>Sip Servlets Management Console</realm-name>
+   </login-config>
+
+   <security-role>
+      <role-name>JBossAdmin</role-name>
+   </security-role>-->
+	
 	<welcome-file-list>
 		<welcome-file>index.html</welcome-file>
 	</welcome-file-list>
