--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -27,10 +27,11 @@
 	
 	<property name="diameter.version" value="1.2.1.GA" />
 	<property name="diameter.download.url" value="https://repository.jboss.org/nexus/content/groups/public/org/mobicents/servers/diameter/mobicents-diameter-mux-sar-jboss-4/${diameter.version}/mobicents-diameter-mux-sar-jboss-4-${diameter.version}.sar" />
-	<property name="diameter-jboss-5.name" value="mobicents-diameter-mux-sar-jboss-5-${diameter.version}.sar"/>
-	<property name="diameter-jboss-5.download.url" value="https://repository.jboss.org/nexus/content/groups/public/org/mobicents/servers/diameter/mobicents-diameter-mux-sar-jboss-5/${diameter.version}/${diameter-jboss-5.name}" />
+	<property name="diameter-jboss-5.version" value="1.3.1.GA" />
+	<property name="diameter-jboss-5.name" value="mobicents-diameter-mux-sar-jboss-5-${diameter-jboss-5.version}.sar"/>
+	<property name="diameter-jboss-5.download.url" value="https://repository.jboss.org/nexus/content/groups/public/org/mobicents/servers/diameter/mobicents-diameter-mux-sar-jboss-5/${diameter-jboss-5.version}/${diameter-jboss-5.name}" />
 	<property name="diameter.distro.path" value="${base.path}/mobicents-diameter-jboss-4-${diameter.version}.sar" />
-	<property name="diameter-jboss-5.distro.path" value="${base.path}/mobicents-diameter-jboss-5-${diameter.version}.sar" />
+	<property name="diameter-jboss-5.distro.path" value="${base.path}/mobicents-diameter-jboss-5-${diameter-jboss-5.version}.sar" />
 	
 	<property name="tomcat.distro.zip.path" value="${base.path}/apache-tomcat-${tomcat.version}.zip" />
 	<property name="jboss.distro.zip.path" value="${base.path}/jboss-${jboss.version}.zip" />
