--- a/sip-servlets-examples/diameter-ro-rf/pom.xml
+++ b/sip-servlets-examples/diameter-ro-rf/pom.xml
@@ -3,23 +3,29 @@
 	<parent>
 		<groupId>org.mobicents.servlet.sip.example</groupId>
 		<artifactId>sip-servlets-examples-parent</artifactId>
-		<version>1.7-SNAPSHOT</version>
+		<version>1.8-SNAPSHOT</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 	<groupId>org.mobicents.servlet.sip.example</groupId>
 	<artifactId>diameter-ro-rf</artifactId>
 	<packaging>war</packaging>
-	<version>1.7-SNAPSHOT</version>
+	<version>1.8-SNAPSHOT</version>
 	<name>Diameter Ro/Rf Sip Servlet Example</name>
 	<url>http://www.mobicents.org/mss/diameter_ro_rf.html</url>
 	
-  <dependencies>
+  <dependencies>  
+    <dependency>
+      <groupId>org.mobicents.servers.diameter</groupId>
+      <artifactId>jdiameter-api</artifactId>
+      <version>1.5.4.0-build402</version>
+      <scope>provided</scope>
+    </dependency>  
     <dependency>
       <groupId>org.mobicents.servers.diameter</groupId>
       <artifactId>mobicents-diameter-mux-jar</artifactId>
-      <version>1.2.1.GA</version>
+      <version>1.3.1.FINAL</version>
       <scope>provided</scope>
-    </dependency>
+    </dependency>  
     <dependency>
       <groupId>jboss</groupId>
       <artifactId>jboss-system</artifactId>
