adding ro rf to the list of examples to build
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@13900 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/pom.xml
+++ b/sip-servlets-examples/pom.xml
@@ -25,6 +25,7 @@
 		<module>custom-call-forwarding-distributable</module>
 		<module>diameter-event-charging</module>
 		<module>diameter-openims</module>
+		<module>diameter-ro-rf</module>
 		<module>facebook-c2c</module>
 		<module>jslee-sips-interop</module>
 		<module>location-service</module>
