--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.BETA2</mobicents.tools.mavenplugin.eclipse.version>
 		<mobicents.cluster.version>1.6</mobicents.cluster.version>
 		<mobicents.balancer.version>1.0.1</mobicents.balancer.version>
-		<mobicents.jain.sip.ha.version>0.11</mobicents.jain.sip.ha.version>
+		<mobicents.jain.sip.ha.version>0.12-SNAPSHOT</mobicents.jain.sip.ha.version>
 		<tomcat.version>6.0.29</tomcat.version>	
 	</properties>
 	
