--- a/sip-servlets-test-suite/sipp-scenarios/performance/jboss-5-setup/mss-sip-stack-jboss.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/performance/jboss-5-setup/mss-sip-stack-jboss.properties
@@ -17,3 +17,6 @@ gov.nist.javax.sip.MAX_FORK_TIME_SECONDS=0
 org.mobicents.ha.javax.sip.cache.MobicentsSipCache.standalone=true
 org.mobicents.ha.javax.sip.CACHE_CLASS_NAME=org.mobicents.ha.javax.sip.cache.NoCache
 #gov.nist.javax.sip.MESSAGE_PARSER_FACTORY=gov.nist.javax.sip.parser.chars.CharsMsgParserFactory
+org.mobicents.ext.java.sip.TRANSACTION_FACTORY=org.mobicents.ext.javax.sip.MobicentsTransactionFactory
+org.mobicents.ext.java.sip.SIP_PROVIDER_FACTORY=org.mobicents.ext.javax.sip.MobicentsSipProviderFactory
+org.mobicents.ext.java.sip.SEND_TRYING_RIGHT_AWAY=true
