Update Issue 1689/n/nintegrating jain sip ext into MSS
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@14056 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
 		<mobicents.cluster.version>1.6</mobicents.cluster.version>
 		<mobicents.balancer.version>1.0.1</mobicents.balancer.version>
 		<mobicents.jain.sip.ha.version>0.12-SNAPSHOT</mobicents.jain.sip.ha.version>
+		<mobicents.jain.sip.ext.version>1.0-SNAPSHOT</mobicents.jain.sip.ext.version>
 		<tomcat.version>6.0.29</tomcat.version>	
 	</properties>
 	
