Removing jboss 5 jdk5 build since jdk5 has been EOLed
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@14270 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -65,7 +65,7 @@
 	
 	<!-- Release target -->
 	
-	<target name="release" depends="clean,release-jboss-5,release-jboss-5-jdk6,release-tomcat,make-src-zip" />
+	<target name="release" depends="clean,release-jboss-5-jdk6,release-tomcat,make-src-zip" />
 	
 	<!-- Tomcat version -->
 	
