--- a/sip-servlets-test-suite/sipp-scenarios/performance/jboss-5-setup/mss-sip-stack-jboss.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/performance/jboss-5-setup/mss-sip-stack-jboss.properties
@@ -20,3 +20,6 @@ org.mobicents.ha.javax.sip.CACHE_CLASS_NAME=org.mobicents.ha.javax.sip.cache.NoC
 org.mobicents.ext.java.sip.TRANSACTION_FACTORY=org.mobicents.ext.javax.sip.MobicentsTransactionFactory
 org.mobicents.ext.java.sip.SIP_PROVIDER_FACTORY=org.mobicents.ext.javax.sip.MobicentsSipProviderFactory
 org.mobicents.ext.java.sip.SEND_TRYING_RIGHT_AWAY=true
+# set to true so that the stack do more validation on dialog, 
+# but won't work on chained applications so false by default
+gov.nist.javax.sip.AUTOMATIC_DIALOG_ERROR_HANDLING=false
