--- a/jopr-plugin-as-5/pom.xml
+++ b/jopr-plugin-as-5/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>jopr-mobicents-sip-servlets-as-5-plugin</artifactId>
-	<version>1.6-SNAPSHOT</version>
+	<version>1.6</version>
 	<packaging>jar</packaging>
 
 	<name>Jopr Mobicents Sip Servlets Plugin For JBoss 5</name>
@@ -32,9 +32,9 @@
       </repositories>
 
 <scm>
-		<connection>scm:svn:http://mobicents.googlecode.com/svn/trunk/servers/sip-servlets</connection>
-		<developerConnection>scm:svn:https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets</developerConnection>
-		<url>http://code.google.com/p/mobicents/source/browse/trunk/servers/sip-servlets</url>
+		<connection>scm:svn:http://mobicents.googlecode.com/svn/tags/parent/jopr-mobicents-sip-servlets-as-5-plugin-1.6</connection>
+		<developerConnection>scm:svn:https://mobicents.googlecode.com/svn/tags/parent/jopr-mobicents-sip-servlets-as-5-plugin-1.6</developerConnection>
+		<url>http://code.google.com/p/mobicents/source/browse/tags/parent/jopr-mobicents-sip-servlets-as-5-plugin-1.6</url>
 	</scm>
 <distributionManagement>
     <repository>
