fixes for separate servletcontextlistener
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@14699 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/applications/simple-sip-servlet/src/main/sipapp/WEB-INF/web.xml
+++ b/sip-servlets-test-suite/applications/simple-sip-servlet/src/main/sipapp/WEB-INF/web.xml
@@ -5,4 +5,9 @@
 	<display-name>Simple Sip Servlet</display-name>
 	<description>Simple Sip Servlet</description>
 		
+	<listener>
+		<listener-class>
+			org.mobicents.servlet.sip.testsuite.SimpleSipServletContextListener
+		</listener-class>
+	</listener>
 </web-app>
