git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@14703 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/sipp-scenarios/performance/jboss-5-setup/mss-sip-stack-jboss.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/performance/jboss-5-setup/mss-sip-stack-jboss.properties
@@ -17,9 +17,9 @@ gov.nist.javax.sip.MAX_FORK_TIME_SECONDS=0
 org.mobicents.ha.javax.sip.cache.MobicentsSipCache.standalone=true
 org.mobicents.ha.javax.sip.CACHE_CLASS_NAME=org.mobicents.ha.javax.sip.cache.NoCache
 #gov.nist.javax.sip.MESSAGE_PARSER_FACTORY=gov.nist.javax.sip.parser.chars.CharsMsgParserFactory
-org.mobicents.ext.java.sip.TRANSACTION_FACTORY=org.mobicents.ext.javax.sip.MobicentsTransactionFactory
-org.mobicents.ext.java.sip.SIP_PROVIDER_FACTORY=org.mobicents.ext.javax.sip.MobicentsSipProviderFactory
-org.mobicents.ext.java.sip.SEND_TRYING_RIGHT_AWAY=true
+#org.mobicents.ext.java.sip.TRANSACTION_FACTORY=org.mobicents.ext.javax.sip.MobicentsTransactionFactory
+#org.mobicents.ext.java.sip.SIP_PROVIDER_FACTORY=org.mobicents.ext.javax.sip.MobicentsSipProviderFactory
+#org.mobicents.ext.java.sip.SEND_TRYING_RIGHT_AWAY=true
 # set to true so that the stack do more validation on dialog, 
 # but won't work on chained applications so false by default
 gov.nist.javax.sip.AUTOMATIC_DIALOG_ERROR_HANDLING=false
