--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
         	<artifactId>mobicents</artifactId>
         	<groupId>org.mobicents</groupId>
-        	<version>1.23-SNAPSHOT</version>
+        	<version>1.23</version>
     	</parent>
 	<groupId>org.mobicents.servlet.sip</groupId>
 	<artifactId>sip-servlets-bootstrap</artifactId>
@@ -85,7 +85,7 @@
 		<!-- MOBICENTS TOOL VERSIONS -->
 		<mobicents.tools.mavenplugin.eclipse.version>1.0.0.BETA2</mobicents.tools.mavenplugin.eclipse.version>
 		<mobicents.cluster.version>1.6</mobicents.cluster.version>
-		<mobicents.balancer.version>1.0.4.FINAL</mobicents.balancer.version>
+		<mobicents.balancer.version>1.0.5.FINAL</mobicents.balancer.version>
 		<mobicents.jain.sip.ha.version>0.13</mobicents.jain.sip.ha.version>
 		<mobicents.jain.sip.ext.version>1.0.BETA1</mobicents.jain.sip.ext.version>
 		<tomcat.version>6.0.29</tomcat.version>	
