--- a/sip-servlets-examples/presence-client-example/pom.xml
+++ b/sip-servlets-examples/presence-client-example/pom.xml
@@ -17,7 +17,7 @@
 		<dependency>
 			<groupId>org.mobicents</groupId>
 			<artifactId>xcap-client-api</artifactId>
-			<version>2.2.1-SNAPSHOT</version>				
+			<version>2.2.1.FINAL</version>				
 		</dependency>		   	
        
 		<dependency>
@@ -26,18 +26,6 @@
 			<version>5.1.0.GA</version>
 			<classifier>jmx-invoker-adaptor-client</classifier>
 			<scope>provided</scope>
-		</dependency>
-		
-		<dependency>
-			<artifactId>client-appusages-resource-lists</artifactId>	
-			<groupId>org.mobicents.servers.xdm</groupId>
-			<version>1.0.0-SNAPSHOT</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.mobicents.servers.xdm</groupId>
-			<artifactId>commons</artifactId>
-			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		
 		<dependency>
