speeding up the doco building
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@15486 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-bootstrap/release/build.xml
+++ b/sip-servlets-bootstrap/release/build.xml
@@ -564,7 +564,7 @@
 			<arg line="clean compile" />
 		</exec-->
 		<exec executable="${mvn.executable}" dir="${docs.stage.dir}/sip-servlets/">
-			<arg line="clean install" />
+			<arg line="clean install -P mobicents" />
 		</exec>
 		
 		<!--copy overwrite="true" todir="${jboss.home}/docs/mobicents-media-server">
