fixing poms and removing the need for web.xml on pure sip applications
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@15501 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-examples/diameter-openims/pom.xml
+++ b/sip-servlets-examples/diameter-openims/pom.xml
@@ -53,6 +53,7 @@
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
 					<warSourceDirectory>
 						${basedir}/src/main/sipapp
 					</warSourceDirectory>
