--- a/sip-servlets-examples/chatserver/pom.xml
+++ b/sip-servlets-examples/chatserver/pom.xml
@@ -25,6 +25,7 @@
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
 					<warSourceDirectory>
 						${basedir}/src/main/sipapp
 					</warSourceDirectory>
