--- a/sip-servlets-examples/shootist-sip-servlet/pom.xml
+++ b/sip-servlets-examples/shootist-sip-servlet/pom.xml
@@ -14,9 +14,7 @@
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
-					<webXml>
-						${basedir}/src/main/sipapp/WEB-INF/sip.xml
-					</webXml>
+					<failOnMissingWebXml>false</failOnMissingWebXml>					
 					<warSourceDirectory>
 						${basedir}/src/main/sipapp
 					</warSourceDirectory>
