--- a/sip-servlets-test-suite/applications/annotated-servlet/pom.xml
+++ b/sip-servlets-test-suite/applications/annotated-servlet/pom.xml
@@ -14,9 +14,7 @@
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
-					<webXml>
-						${basedir}/src/main/sipapp/WEB-INF/web.xml
-					</webXml>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
 					<warSourceDirectory>
 						${basedir}/src/main/sipapp
 					</warSourceDirectory>
