Hudson fix for AR cluster test
git-svn-id: https://mobicents.googlecode.com/svn/trunk/servers/sip-servlets@15849 bf0df8d0-2c1f-0410-b170-bd30377b63dc

--- a/sip-servlets-test-suite/sipp-scenarios/clustering/ar/proxy-b2bua-ar-dar.properties
+++ b/sip-servlets-test-suite/sipp-scenarios/clustering/ar/proxy-b2bua-ar-dar.properties
@@ -1,5 +1,5 @@
 #Application Router Configuration
 #Wed Nov 17 22:04:39 EET 2010
-INVITE=("CustomDistributableCallForwardingB2BUAApplication", "DAR\:From", "TERMINATING", "", "NO_ROUTE", "0", "DIRECTION\=OUTBOUND"),("org.mobicents.servlet.sip.example.DistributableLocationServiceApplication", "DAR\:From", "TERMINATING", "", "NO_ROUTE", "0", "DIRECTION\=INBOUND")
+INVITE=("org.mobicents.servlet.sip.example.DistributableLocationServiceApplication", "DAR\:From", "TERMINATING", "", "NO_ROUTE", "0", "DIRECTION\=INBOUND"),("CustomDistributableCallForwardingB2BUAApplication", "DAR\:From", "TERMINATING", "", "NO_ROUTE", "0", "DIRECTION\=OUTBOUND")
 REGISTER=("DistributableClick2Call", "DAR\:From", "TERMINATING", "", "NO_ROUTE", "0"),("org.mobicents.servlet.sip.example.DistributableSimpleApplication", "DAR\:From", "ORIGINATING", "", "NO_ROUTE", "0")
 OPTIONS=("org.mobicents.servlet.sip.example.DistributableSimpleApplication", "DAR\:From", "ORIGINATING", "", "NO_ROUTE", "0")
